--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chirag's joke",
+  "name": "Witticismdo",
   "description": "gives jokes whenever you click it!",
   "version": "1.0",
   "manifest_version": 2,
